testdata/baselines/reference/submodule/compiler/corrupted.errors.txt
corrupted.ts(1,1): error TS1490: File appears to be binary.
corrupted.ts(1,1): error TS1128: Declaration or statement expected.


==== corrupted.ts (2 errors) ====
    Æ¼Á
    
!!! error TS1490: File appears to be binary.
    ~~~~~~~~
!!! error TS1128: Declaration or statement expected.